--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ plugins {
 
 android {
     namespace 'com.example.myproyect'
-    compileSdk 32
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.myproyect"
         minSdk 26
-        targetSdk 33
+        targetSdk 34
         versionCode 1
-        versionName "1.6"
+        versionName "1.7"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -26,6 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        buildConfig true
+    }
 }
 
 dependencies {
@@ -34,6 +37,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation files('libs\\mysql-connector-java-5.1.49.jar')
+    implementation 'androidx.activity:activity:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.10.0'
+
 
 
     testImplementation 'junit:junit:4.13.2'
