--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,27 +15,26 @@
         android:theme="@style/Theme.MyProyect"
         tools:targetApi="31">
         <activity
+            android:name=".actividades.actividades.admin.ListaU"
+            android:exported="false" />
+        <activity
             android:name=".actividades.actividades.admin.MantenimientoLosas_Activity"
-            android:exported="false">
-
-
-
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".actividades.actividades.admin.ListarUsers_Admin_Activity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".actividades.actividades.admin.ListarReservasADMIN_Activity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".actividades.actividades.usuario.ConsultarReservaUser_Activity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".actividades.actividades.usuario.TablaReservaUser_Activity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".actividades.actividades.usuario.ActualizarDatosUSER_Activity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".actividades.actividades.usuario.pago.Tarjeta_Activity"
             android:exported="false" />
@@ -47,9 +46,7 @@
             android:exported="false" />
         <activity
             android:name=".actividades.actividades.admin.MenuAdmin_Activity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".actividades.actividades.usuario.Menu_Losas_Activity"
             android:exported="false">
@@ -83,8 +80,10 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -92,7 +91,6 @@
         <activity
             android:name=".actividades.actividades.Login_Activity"
             android:exported="false">
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
