--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,10 @@ android {
 
     defaultConfig {
         applicationId "com.example.myproyect"
-        minSdk 26
+        minSdk 27
         targetSdk 34
         versionCode 1
-        versionName "1.7"
+        versionName "1.8"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -40,6 +40,7 @@ dependencies {
     implementation 'androidx.activity:activity:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
+    implementation 'org.mindrot:jbcrypt:0.4'
 
 
 
