--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,14 @@
         android:theme="@style/Theme.MyProyect"
         tools:targetApi="31">
         <activity
+            android:name=".actividades.actividades.usuario.FallaLoad_Activity"
+            android:exported="false" />
+        <activity
             android:name=".actividades.actividades.admin.ListaU"
             android:exported="false" />
         <activity
             android:name=".actividades.actividades.admin.MantenimientoLosas_Activity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".actividades.actividades.admin.ListarUsers_Admin_Activity"
             android:exported="false" />
@@ -46,7 +49,7 @@
             android:exported="false" />
         <activity
             android:name=".actividades.actividades.admin.MenuAdmin_Activity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".actividades.actividades.usuario.Menu_Losas_Activity"
             android:exported="false">
