--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 27
         targetSdk 34
         versionCode 2
-        versionName "2.0"
+        versionName "2.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -37,11 +37,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation files('libs\\mysql-connector-java-5.1.49.jar')
+    //implementation files('libs\\mysql-connector-java-8.0.30.jar')
     implementation 'androidx.activity:activity:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'org.mindrot:jbcrypt:0.4'
-
 
 
     testImplementation 'junit:junit:4.13.2'
