--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,13 @@
         android:theme="@style/Theme.MyProyect"
         tools:targetApi="31">
         <activity
-            android:name=".actividades.actividades.usuario.FallaLoad_Activity"
+            android:name=".actividades.actividades.TestRv"
             android:exported="false" />
         <activity
-            android:name=".actividades.actividades.admin.ListaU"
+            android:name=".actividades.actividades.admin.ListaU2"
+            android:exported="false" />
+        <activity
+            android:name=".actividades.actividades.usuario.FallaLoad_Activity"
             android:exported="false" />
         <activity
             android:name=".actividades.actividades.admin.MantenimientoLosas_Activity"
@@ -82,12 +85,6 @@
         <activity
             android:name=".actividades.actividades.CargaActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -95,9 +92,21 @@
         <activity
             android:name=".actividades.actividades.Login_Activity"
             android:exported="false">
+
+
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+        </activity>
+        <activity
+            android:name=".actividades.actividades.admin.ListaU"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
         </activity>
     </application>
 
