correcion de bugs
2.2.7

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,14 +11,22 @@ android {
         minSdk 27
         targetSdk 34
         versionCode 2
-        versionName "2.2.6"
+        versionName "2.2.7"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
+        debug {
+            debuggable true
+            applicationIdSuffix  ".debug"
+            versionNameSuffix "-debug"
+
+        }
+
         release {
-            minifyEnabled false
+            debuggable false
+            minifyEnabled true // Ofuscar y minimizar código
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
